# StMrfTracking

./: .gitignore  .gitmodules  CMakeLists.txt  VehiclesTrackerApp.sln  main.cpp
GCO/: GCO.vcxproj  GCO.vcxproj.filters
Tracking/: BlockArray.cpp  BlockArray.h  GcWrappers.cpp  GcWrappers.h  NightDetection.cpp  NightDetection.h  StMrf.cpp  StMrf.h  Tracker.cpp  Tracker.h  Tracking.cpp  Tracking.h  Utils.cpp  Utils.h
VehiclesTrackerApp/: BlockArray.h  GcWrappers.h  MainForm.cpp  MainForm.h  MainForm.resx  NightDetection.cpp  NightDetection.h  StMrf.cpp  StMrf.h  Tracker.cpp  Tracker.h  Tracking.cpp  Tracking.h  Utils.cpp  Utils.h  VehiclesTrackerApp.vcxproj  VehiclesTrackerApp.vcxproj.filters
